aksmigrate/test/e2e/manifests/scenario3-endport/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-client
  namespace: e2e-endport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-client
  template:
    metadata:
      labels:
        app: db-client
    spec:
      containers:
        - name: busybox
          image: busybox:1.36
          command: ["sleep", "3600"]
