aksmigrate/test/e2e/manifests/scenario3-endport/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-endport
  labels:
    aksmigrate-e2e: "true"
